--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.10.1"
+    "graphql": "^15.10.1",
+    "mongoose": "^8.10.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
