--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.1",
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "express-graphql": "^0.12.0",
